fix category button on small devices

--- a/style.css
+++ b/style.css
@@ -397,9 +397,8 @@ footer ul a:hover {
     display: flex;
     align-items: center;
     box-shadow: -2rem 3rem 7rem rgba(0, 0, 0, 0.7);
-    background: var(--color-gray-900);
     border-top: 1px solid var(--color-bg);
-    animation: animateDropdown 1s ease forwards;
+    animation: animateDropdown 400ms 0s ease forwards;
     opacity: 0;
     transform-origin: top;
   }
@@ -497,6 +496,7 @@ footer ul a:hover {
   }
 
   .category__buttons-container {
+    width: fit-content;
     grid-template-columns: 1fr 1fr;
   }
 
